// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

// User model - stores profile data locally while using Clerk for auth
model User {
    userId       String   @id @default(cuid())
    clerkUserId  String   @unique // Links to Clerk's user ID
    email        String?
    firstName    String?
    lastName     String?
    profileImage String?
    userType     UserType @default(STUDENT)
    timeZone     String?
    createdAt    DateTime @default(now())
    updatedAt    DateTime @updatedAt

    // Relations
    studentProfile StudentProfile?
    coachProfile   CoachProfile?
    videoLibraries VideoLibrary[]

    @@index([clerkUserId])
}

enum UserType {
    STUDENT
    COACH
    ADMIN
    FACILITY
}

model StudentProfile {
    studentProfileId String   @id @default(cuid())
    userId           String   @unique
    user             User     @relation(fields: [userId], references: [userId], onDelete: Cascade)
    skillLevel       String?  // Beginner, Intermediate, Advanced, Professional
    goals            String?  @db.Text
    bio              String?  @db.Text
    createdAt        DateTime @default(now())
    updatedAt        DateTime @updatedAt
}

model CoachProfile {
    coachProfileId String   @id @default(cuid())
    userId         String   @unique
    user           User     @relation(fields: [userId], references: [userId], onDelete: Cascade)
    bio            String?  @db.Text
    experience     String?  @db.Text
    specialties    String[] // Array of specialties
    teachingStyles String[] // Array of teaching styles
    headerImage    String?
    rate           Int      @default(0) // Flat rate for coaching sessions
    isVerified     Boolean  @default(false)
    createdAt      DateTime @default(now())
    updatedAt      DateTime @updatedAt
}

model Post {
    id        Int      @id @default(autoincrement())
    name      String
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    @@index([name])
}

// Enum for media types in video libraries
enum MediaType {
    URL_VIDEO
    FILE_VIDEO
}

// VideoLibrary model - represents a collection of gameplay videos
model VideoLibrary {
    collectionId    String   @id @default(cuid())
    userId          String   // Links to any User
    user            User     @relation(fields: [userId], references: [userId], onDelete: Cascade)
    title           String
    description     String?  @db.Text
    mediaType       MediaType // Either URL_VIDEO or FILE_VIDEO
    isDeleted       Boolean  @default(false) // Soft deletion flag
    deletedAt       DateTime? // When the item was soft-deleted
    createdAt       DateTime @default(now())
    updatedAt       DateTime @updatedAt
    
    // Relations
    media           Media[]

    @@index([userId])
    @@index([isDeleted])
}

// Media model - represents individual videos in a library
model Media {
    mediaId         String       @id @default(cuid())
    collectionId    String
    library         VideoLibrary @relation(fields: [collectionId], references: [collectionId], onDelete: Cascade)
    title           String
    description     String?      @db.Text
    // For URL videos
    videoUrl        String?
    // For file videos
    fileKey         String?      // Storage key for uploaded files
    fileName        String?
    fileSize        Int?         // Size in bytes
    duration        Int?         // Duration in seconds
    thumbnailUrl    String?
    isDeleted       Boolean      @default(false) // Soft deletion flag
    deletedAt       DateTime?    // When the item was soft-deleted
    createdAt       DateTime     @default(now())
    updatedAt       DateTime     @updatedAt

    @@index([collectionId])
    @@index([isDeleted])
}
